UFO functionality works

--- a/index.html
+++ b/index.html
@@ -223,19 +223,19 @@
 				<div id="main-content-shape">
 					<div id="line-chart-container" style="display: flex;">
 						<div class="col">
-							<div id="chart" style="min-height: 30vh; width: 100%;"></div>
+							<div id="reportsOverTimeChart" style="min-height: 60vh; width: 100%;"></div>
 							<div id="controls">
 								<button id="play-pause">Play</button>
-								<button id="reset">Reset</button>
+								<button id="resetLine">Reset</button>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div id="pop-culture-text" style="margin-top: 100px">
+				<!-- <div id="pop-culture-text" style="margin-top: 100px">
 					<h3>Pop Culture References</h3>
 					<p>Insert your pop culture commentary or text here...</p>
-					<!-- TODO: Dimitrios will put some kind of easter egg for the alien movies -->
-				</div>
+					TODO: Dimitrios will put some kind of easter egg for the alien movies
+				</div> -->
 			</section>
 
 			<!-- Again: cool, but we don't have the needed vis -->
@@ -313,8 +313,8 @@
 		<script src="js/clock.js"></script>
 		<script src="js/zoomMap.js"></script>
 		<script src="js/shape.js"></script>
-		<!-- <script src="js/reportsLineGraph.js"></script> -->
-		<script src="js/line.js"></script>
+		<script src="js/reportsLineGraph.js"></script>
+		<!-- <script src="js/line.js"></script> -->
 		<script src="js/main.js"></script>
 		<script src="js/scroll.js"></script>
 	</body>
