--- a/index.html
+++ b/index.html
@@ -221,21 +221,24 @@
 					<h2>Analysis of Encounters and Cultural Impact</h2>
 				</div>
 				<div id="main-content-shape">
-					<div id="line-chart-container" style="display: flex;">
+					<div class="row">
 						<div class="col">
-							<div id="reportsOverTimeChart" style="min-height: 60vh; width: 100%;"></div>
+							<div id="reportsOverTimeChart" style="min-height: 50vh; width: 100%;"></div>
 							<div id="controls">
 								<button id="play-pause">Play</button>
 								<button id="resetLine">Reset</button>
 							</div>
 						</div>
 					</div>
+					<div class="row" style="height: 30vh; color: black">
+						<div class="col" id="yearData">
+							Click a point on the line to view its statistics
+						</div>
+						<div class="col" id="movieData">
+							Click a point on the line to view its cultural impact
+						</div>
+					</div>
 				</div>
-				<!-- <div id="pop-culture-text" style="margin-top: 100px">
-					<h3>Pop Culture References</h3>
-					<p>Insert your pop culture commentary or text here...</p>
-					TODO: Dimitrios will put some kind of easter egg for the alien movies
-				</div> -->
 			</section>
 
 			<section class="page-section">
