--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
 							<ellipse cx="400" cy="300" rx="50" ry="20" fill="silver" stroke="white" stroke-width="3"/>
 						</svg>
 
-						<svg class="ufo-shape" data-x="930" data-y="210" id="shape-cylinder" width="60" height="130" viewBox="365 235 70 130">
+						<!-- Cylinder -->
+						<svg class="ufo-shape" data-x="830" data-y="210" id="shape-cylinder" width="60" height="130" viewBox="365 235 70 130">
 							<!-- Main Body -->
 							<rect x="370" y="250" width="60" height="100" fill="silver" stroke="white" stroke-width="3"/>
 							<!-- Top Oval -->
@@ -390,8 +391,8 @@
 							alt="Fireball UFO"
 							width="80" height="80">
 
-						
-						<svg class="ufo-shape" data-x="970" data-y="370" id="shape-chevron" width="160" height="100" viewBox="-80 -40 160 100">
+						<!-- Checkmark -->
+						<svg class="ufo-shape" data-x="870" data-y="370" id="shape-chevron" width="160" height="100" viewBox="-80 -40 160 100">
 							<!-- Chevron Shape -->
 							<polygon points="-50,-25 0,25 50,-25 75,-12.5 0,50 -75,-12.5"
 									fill="silver"
