--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
 					<div class="left-panel">
 						<div class="ufo-space2" id="ufo-space2"></div> <!-- Space for UFOs -->
 						<div class="landing-pad" id="landing-pad"></div> <!-- Oval Platform for Stickmen -->
+
+						<h3 id="percentage-output" style="color: white; margin-top: 20px;">Select witnesses and/or ships to see data.</h3>
+						<div class="percentage-container" style="color: white; text-align: center;">
+							<div class="percentage-bar" id="percentage-bar" style="color: black;"></div>
+						</div>
 					</div>
 			
 					<!-- Right Side: Selection Buttons -->
@@ -194,7 +199,7 @@
 								<button class="witness-btn" data-value="solo">Solo</button>
 								<button class="witness-btn" data-value="smallGroup">Small Group</button>
 								<button class="witness-btn" data-value="crowd">Crowd</button>
-								<button class="witness-btn" data-value="none">No Selection</button>
+								<button class="witness-btn" data-value="none">All Witnesses</button>
 							</div>
 						</div>
 			
@@ -204,13 +209,8 @@
 								<button class="ship-btn" data-value="single">Single</button>
 								<button class="ship-btn" data-value="smallGroup">Small Group</button>
 								<button class="ship-btn" data-value="fleet">Fleet</button>
-								<button class="ship-btn" data-value="none">No Selection</button>
+								<button class="ship-btn" data-value="none">All Ships</button>
 							</div>
-						</div>
-			
-						<h3 id="percentage-output" style="color: black;">Select witnesses and/or ships to see data.</h3>
-						<div class="percentage-container">
-							<div class="percentage-bar" id="percentage-bar"></div>
 						</div>
 					</div>
 				</div>
