CLOCK MARGINS WORK

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 					</div>
 				</div>
 				<div class="clock-container">
-					<div class="clock-wrapper">
-						<h2 id="time-display">12 AM</h2>
+					<div class="clock-wrapper" style="margin-left: -80px; margin-right: 120px;">
+						<h2 id="time-display" style="margin-left: 10px;">12 AM</h2>
 						<svg id="clock" width="350" height="350"></svg>
-						<div class="button-container">
+						<div class="button-container" style="margin-top: 10px; margin-left: 10px">
 							<button id="play">Play</button>
 							<button id="reset">Reset</button>
 						</div>
@@ -465,7 +465,7 @@
 					
 
 					<div id="ufo-sidebar"> 
-						<button id="toggle-proportional">Resize UFOs by Frequency</button>      
+						<button id="toggle-proportional">Resize UFOs by Frequency</button>    
 						<h2 id="shape-title">Select a UFO Shape</h2>
 						<br>
 						<div id="shape-details">Details will appear here when you select a shape.</div>
