Switched shape button to toggle

--- a/index.html
+++ b/index.html
@@ -465,9 +465,18 @@
 					
 
 					<div id="ufo-sidebar"> 
-						<button id="toggle-proportional">Resize UFOs by Frequency</button>    
 						<h2 id="shape-title">Select a UFO Shape</h2>
 						<br>
+
+						<!-- Rounded switch -->
+						 <div style="display: flex;">
+							<p>Resize UFOs by Frequency</p>
+							<label class="switch" id="toggle-proportional">
+								<input type="checkbox">
+								<span class="slider round"></span>
+							</label>
+						</div>
+						
 						<div id="shape-details">Details will appear here when you select a shape.</div>
 						<br>
 						<br>
