--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
 				
 					<div class="team-container">
 						<div class="team-member">
-							<img src="img/placeholder.png" alt="Team Member 1">
-							<p>Team Member 1</p>
+							<img src="img/haya.jpg" alt="Team Member 1">
+							<p>Haya Tariq</p>
 						</div>
 						<div class="team-member">
 							<img src="img/jana.jpg" alt="Team Member 2">
